feat: improve pointcloud conversion
- improve points shuffling
- fix temp duplicate writing bug